--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Dashboard</title>
 </head>
 <header>
-    <div class="sidebar">
-        <p>sidebar</p>
-    </div>
     <div class="header-content">
-        <p>header</p>
-    </div>
+        <div class="side-bar">
+            <p>sidebar</p>
+
+        </div>
+        <div class="top-bar">
+            <p>top-bar</p>
+
+        </div>
+      </div>
 </header>
 <body>
     <div class="main-content">
