added icons for the side bar and started css

--- a/index.html
+++ b/index.html
@@ -1,29 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
     <title>Dashboard</title>
-</head>
-<header>
-    <div class="header-content">
-        <div class="side-bar">
-            <p>sidebar</p>
-
-        </div>
-        <div class="top-bar">
-            <p>top-bar</p>
-
-        </div>
+  </head>
+  <header></header>
+  <body>
+    <div class="side-bar">
+      <div class="topSideBarItems">
+        <img src="icons/view-dashboard.svg" alt="" />
+        <h1>Dashboard</h1>
       </div>
-</header>
-<body>
-    <div class="main-content">
-        <p>main</p>
+      <div class="menuItems">
+        <img src="icons/home.svg" alt="home" />
+        <h5>Home</h5>
+      </div>
+      <div class="menuItems">
+        <img src="icons/airplane.svg" alt="aircraft" />
+        <h5>Aircraft</h5>
+      </div>
+      <div class="menuItems">
+        <img src="icons/book.svg" alt="book" />
+        <h5>Logs</h5>
+      </div>
+      <div class="menuItems">
+        <img src="icons/wrench.svg" alt="" />
+        <h5>Maintenance</h5>
+      </div>
+      <div class="menuItems">
+        <img src="icons/account.svg" alt="" />
+        <h5>Personnel</h5>
+      </div>
     </div>
 
-    
-</body>
+    <div class="navbar">
+      <div class="top-nav"></div>
+      <div class="bottom-nav"></div>
+    </div>
+  </body>
 </html>
