adjust all icons and font sizes

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="reset.css" />
     <title>Dashboard</title>
   </head>
-  <header></header>
   <body>
     <div class="side-bar">
-      <div class="topSideBarItems">
+      <div class="topSideBarItems menuItems">
         <img src="icons/view-dashboard.svg" alt="" />
         <h1>Dashboard</h1>
       </div>
@@ -34,6 +34,10 @@
         <img src="icons/account.svg" alt="" />
         <h5>Personnel</h5>
       </div>
+      <!-- <div class="searchBar">
+        <img src="icons/magnify.svg" alt="" />
+      </div>
+      <input type="text" name="search" autocomplete="off" /> -->
     </div>
 
     <div class="navbar">
