added new icons in png, started search bar and top nav

--- a/index.html
+++ b/index.html
@@ -4,45 +4,112 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="reset.css" />
     <title>Dashboard</title>
   </head>
   <body>
-    <div class="side-bar">
-      <div class="topSideBarItems menuItems">
-        <img src="icons/view-dashboard.svg" alt="" />
+    <div class="side-drawer">
+      <div class="topdrawer menuItems" id="top">
+        <img src="icons/view-dashboard.png" alt="" />
         <h1>Dashboard</h1>
       </div>
       <div class="menuItems">
-        <img src="icons/home.svg" alt="home" />
-        <h5>Home</h5>
+        <img src="icons/home.png" alt="" />
+        <h3>Home</h3>
       </div>
       <div class="menuItems">
-        <img src="icons/airplane.svg" alt="aircraft" />
-        <h5>Aircraft</h5>
+        <img src="icons/hammer-wrench.png" alt="" />
+        <h3>maintenance</h3>
       </div>
       <div class="menuItems">
-        <img src="icons/book.svg" alt="book" />
-        <h5>Logs</h5>
+        <img src="icons/airplane.png" alt="" />
+        <h3>Aircraft</h3>
       </div>
       <div class="menuItems">
-        <img src="icons/wrench.svg" alt="" />
-        <h5>Maintenance</h5>
+        <img src="icons/book-open-page-variant.png" alt="" />
+        <h3>Logs</h3>
       </div>
       <div class="menuItems">
-        <img src="icons/account.svg" alt="" />
-        <h5>Personnel</h5>
+        <img src="icons/account-multiple.png" alt="" />
+        <h3>personnel</h3>
       </div>
-      <!-- <div class="searchBar">
-        <img src="icons/magnify.svg" alt="" />
-      </div>
-      <input type="text" name="search" autocomplete="off" /> -->
     </div>
 
-    <div class="navbar">
-      <div class="top-nav"></div>
-      <div class="bottom-nav"></div>
+    <div class="nav">
+      <div class="top-nav">
+        <div class="search">
+          <img src="icons/magnify.png" alt="mag" />
+          <input
+            type="search"
+            name="search"
+            autocomplete="off"
+            value="search"
+          />
+        </div>
+        <div class="bell">
+          <img src="icons/bell-ring.png" alt="" />
+        </div>
+      </div>
+      <div class="bottom">
+        <div class="bottom-nav">
+          <p>hey there this is my admin dashboard</p>
+        </div>
+      </div>
     </div>
+
+    <main class="content">
+      <div class="profile">
+        <h5>Profile</h5>
+        <div class="cards">
+          <div class="cards-title">
+            <h5>aircraft 111</h5>
+          </div>
+          <div class="cards-text">jump20</div>
+          <img src="icons/plus.png" alt="" />
+          <img src="icons/minus.png" alt="" />
+        </div>
+        <div class="cards">
+          <div class="cards-title">
+            <h5>aircraft 111</h5>
+          </div>
+          <div class="cards-text">jump20</div>
+          <img src="icons/plus.png" alt="" />
+          <img src="icons/minus.png" alt="" />
+        </div>
+        <div class="cards">
+          <div class="cards-title">
+            <h5>aircraft 111</h5>
+          </div>
+          <div class="cards-text">jump20</div>
+          <img src="icons/plus.png" alt="" />
+          <img src="icons/minus.png" alt="" />
+        </div>
+        <div class="cards">
+          <div class="cards-title">
+            <h5>aircraft 111</h5>
+          </div>
+          <div class="cards-text">jump20</div>
+          <img src="icons/plus.png" alt="" />
+          <img src="icons/minus.png" alt="" />
+        </div>
+        <div class="cards">
+          <div class="cards-title">
+            <h5>aircraft 111</h5>
+          </div>
+          <div class="cards-text">jump20</div>
+          <img src="icons/plus.png" alt="" />
+          <img src="icons/minus.png" alt="" />
+        </div>
+        <div class="cards">
+          <div class="cards-title">
+            <h5>aircraft 111</h5>
+          </div>
+          <div class="cards-text">jump20</div>
+          <img src="icons/plus.png" alt="" />
+          <img src="icons/minus.png" alt="" />
+        </div>
+      </div>
+    </main>
   </body>
 </html>
