adjust padding for all imgs, text, and search bar

--- a/index.html
+++ b/index.html
@@ -40,20 +40,35 @@
       <div class="top-nav">
         <div class="search">
           <img src="icons/magnify.png" alt="mag" />
-          <input
-            type="search"
-            name="search"
-            autocomplete="off"
-            value="search"
-          />
+          <input type="search" name="search" autocomplete="off" value="" />
         </div>
-        <div class="bell">
-          <img src="icons/bell-ring.png" alt="" />
+        <div class="profileView">
+          <img class="bell" src="icons/bell-ring.png" alt="" />
+          <img
+            class="profilePic"
+            src="https://github.com/ismaelgalarza1.png"
+            alt="me"
+          />
+          <h5>Ismael Galarza</h5>
         </div>
       </div>
+
       <div class="bottom">
         <div class="bottom-nav">
-          <p>hey there this is my admin dashboard</p>
+          <img
+            class="bottomPic"
+            src="https://github.com/ismaelgalarza1.png"
+            alt="me"
+          />
+        </div>
+        <div class="log-text">
+          <h5 class="greeting">Hi there,</h5>
+          <p class="name">Ismael Galarza (@galarza321)</p>
+        </div>
+        <div class="buttons">
+          <button class="new">New</button>
+          <button class="upload">Upload</button>
+          <button class="share">Share</button>
         </div>
       </div>
     </div>
