added soical media icons to side drawer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="reset.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>Dashboard</title>
   </head>
   <body>
@@ -33,6 +37,30 @@
       <div class="menuItems">
         <img src="icons/account-multiple.png" alt="" />
         <h3>personnel</h3>
+      </div>
+      <hr />
+      <div class="social-media">
+        <h3>Social Media</h3>
+        <div class="social-icons">
+          <div class="linkedin">
+            <a href="https://linkedin.com/in/ismael-galarza-016b4519b"
+              ><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i
+            ></a>
+            <h5>Linkedin</h5>
+          </div>
+          <div class="github">
+            <a href="https://github.com/ismaelgalarza1/odin-recipes"
+              ><i class="fa fa-github fa-2x" aria-hidden="true"></i
+            ></a>
+            <h5>GitHub</h5>
+          </div>
+          <div class="instagram">
+            <a href="https://instagram.com/galarza321"
+              ><i class="fa fa-instagram fa-2x" aria-hidden="true"></i
+            ></a>
+            <h5>Instagram</h5>
+          </div>
+        </div>
       </div>
     </div>
 
