adjust social media icons and header

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a href="https://linkedin.com/in/ismael-galarza-016b4519b"
               ><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i
             ></a>
-            <h5>Linkedin</h5>
+            <h5>LinkedIn</h5>
           </div>
           <div class="github">
             <a href="https://github.com/ismaelgalarza1/odin-recipes"
