--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
       </div>
       <div class="menuItems">
         <img src="icons/account-multiple.png" alt="" />
-        <h3>personnel</h3>
+        <h3 id="personnel">personnel</h3>
       </div>
       <hr />
       <div class="social-media">
-        <h3>Social Media</h3>
+        <h3 id="social">Social Media</h3>
         <div class="social-icons">
           <div class="linkedin">
             <a href="https://linkedin.com/in/ismael-galarza-016b4519b"
@@ -102,8 +102,8 @@
     </div>
 
     <main class="content">
+      <h5>Profile</h5>
       <div class="profile">
-        <h5>Profile</h5>
         <div class="cards">
           <div class="cards-title">
             <h5>aircraft 111</h5>
